Enable security state computation for HeadlessWebContents.

BUG=609394

Review-Url: https://codereview.chromium.org/2507003002
Cr-Commit-Position: refs/heads/master@{#432948}

Former-commit-id: f2531a56666efc359de43e0c8f3230868b2d5698